--- a/sass/utils/main.scss
+++ b/sass/utils/main.scss
@@ -18,4 +18,4 @@
 @import "./components/header-portfolio";
 @import "./components/buttons_portfolio";
 @import "./components/project-list";
-
+@import "./components/mobile-menu";
