--- a/sass/utils/components/_basement.scss
+++ b/sass/utils/components/_basement.scss
@@ -11,7 +11,7 @@
     margin-right: auto;
   font-size: 14px;
   line-height: 24px;
-    width: 1200px;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
   
@@ -26,14 +26,14 @@
     text-decoration: none;
   }
   .basement address{
-    margin-top: 20px;
+    margin-top: 28px;
     font-style: normal;
   }
   .basement-inf {
     color: #ffffff;
     padding: 0;
     margin: 0;
-    margin-top: 9px;
+    margin-top: 12px;
   }
     
   .basement-inf a {
@@ -47,7 +47,7 @@
     text-decoration: none;
   }
   .basement-inf li:not(:first-child) {
-    margin-top: 9px;
+    margin-top: 12px;
   }
   .footer-join{
     align-items: center;
@@ -74,7 +74,7 @@
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .join{
-    display: flex;
+    display:inline-flex;
    
   }
   .join-icon{
@@ -168,3 +168,74 @@
   .footer-email_icon{
   margin-left: 10px;
   }
+  @media screen and (min-width:100px) and (max-width:767px) {
+    .footer-container{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    
+    }
+  
+  .footer-address{
+    text-align: center;
+  
+  }
+  .footer-join{
+    text-align: center;
+    width: auto;
+    margin: 0;
+    margin:60px 0px;
+  }
+  .footer-email_input{
+    display: flex;
+    margin: 0;
+    flex-direction: column;
+      align-items: center;
+      width: 100%;
+  }
+  .footer-email_button{
+    margin: 0;
+    margin-top: 20px;
+  }
+  .email_input {
+    width: 100%;
+  }
+
+}
+  
+  @media screen and (min-width:768px) and (max-width:1199px) {
+    
+    .footer-container{
+      flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .footer-address{
+    text-align: center;
+  width: 50%;
+  
+  }
+  .footer-join{
+    text-align: center;
+    width: 50%;
+    margin: 0;
+   
+  }
+  .footer-email_input{
+    display: flex;
+    text-align: center;
+    margin: 0;
+    flex-direction: column;
+      align-items: center;
+      width: 100%;
+      margin-top: 60px;
+  }
+
+  .footer-email_button{
+    margin: 0;
+    margin-top: 20px;
+  }
+  }
+    @media screen and (min-width:1200px){
+
+    }
