--- a/sass/utils/components/_customer.scss
+++ b/sass/utils/components/_customer.scss
@@ -14,7 +14,7 @@
 
   .customer__clients-link {
     display: flex;
-    width: 170px;
+    width: 100%;
     height: 92px;
     align-items: center;
     justify-content: center;
@@ -30,4 +30,10 @@
     fill: #2196f3;
     border: 1px solid $accent_color;
   }
-   }
+}
+  @media screen and (min-width: 100px) and (max-width: 1199px) {
+    .customer {
+      display: none;
+    }
+  }
+
