--- a/sass/utils/components/_features.scss
+++ b/sass/utils/components/_features.scss
@@ -7,6 +7,7 @@
   }
   .features li:not(:last-child) {
     margin-right: 30px;
+  
   }
   .features li {
     width: 270px;
@@ -45,3 +46,96 @@
     width: 70px;
     height: 70px;
   }
+  @media screen and (min-width:100px) and (max-width:767px) {
+    .features {
+      display:block;
+    }
+    .features li {
+      width:100%;
+ 
+      
+    }
+    .features li:not(:last-child) {
+      margin-right: 30px;
+    }
+    
+   
+    .features__icon-background {
+      width:100%;
+      max-width: 450px;
+       margin-right: 0px;
+       margin-left: auto;
+       margin-right: auto;
+
+    }
+    .container {
+      max-width: 450px; 
+      padding: 0;
+    }
+  .section-we_do{
+    opacity: 0;
+   position: absolute;
+  }
+  .customers-section{
+    opacity: 0;
+    position: absolute;
+    }
+    .customer__clients-link {
+      width: 100%;
+    }
+    section{
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+  
+
+  }
+  
+  @media screen and (min-width:768px) and (max-width:1199px) {
+    .features {
+      flex-wrap: wrap;
+   
+   
+    }
+    .features li {
+      width: 354px;
+    }
+    .features li:not(:last-child) {
+      margin-right:0;
+    }
+    .features .features-item:nth-child(2n) {
+      margin-right: 0;
+  }
+  .features .features-item {
+      margin-right: 30px;
+  }
+   
+    .features__icon-background {
+      width:100%;
+      width: 354px;
+      margin-right: 30px;
+     
+
+    }
+    .container {
+        max-width: 768px;
+  }
+  .section-we_do{
+    opacity: 0;
+   position: absolute;
+  }
+  .customers-section{
+    opacity: 0;
+    position: absolute;}
+    section{
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+  }
+  @media screen and (min-width:1200px) {
+    .features {
+      display:flex;
+    }
+    
+  }
+  
