--- a/sass/utils/components/_info_team.scss
+++ b/sass/utils/components/_info_team.scss
@@ -26,3 +26,41 @@
     align-items:center;
   
   }
+  @media screen and (min-width:100px) and (max-width:767px) {
+    .info_team {
+      display:inline;
+    }
+    .info_team__team-section img{
+      max-width: 450px;
+      width: 100%;
+    }
+    .info_team :not(:first-child ,div,p,ul){
+      margin-left: 0px;
+      
+    }
+    .info_team__team-section {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width:768px) and (max-width:1199px) {
+    .info_team {
+      flex-wrap: wrap;
+    }
+    .info_team :not(:first-child ,div,p,ul){
+      margin-left: 0px;
+      
+    }
+    .info_team__team-section {
+      margin-bottom: 30px;
+      margin-right: 30px;
+    }
+    .info_team :not(:first-child ,div,p,ul){
+      margin-left: 0px;
+      
+    }
+    .info_team .info_team__team-section:nth-child(2n) {
+      margin-right: 0;;
+    }
+
+  }
+  @media screen and (min-width:1200px){}
