--- a/sass/utils/components/_page-header.scss
+++ b/sass/utils/components/_page-header.scss
@@ -21,6 +21,14 @@
   padding: 0;
   transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .logo-web {
   color:$accent_color ;
 }
+.button-header-menu{
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 15px;
+  border: none;
+  background-color: #FFFFFF;}
