--- a/sass/utils/components/_section-benefist.scss
+++ b/sass/utils/components/_section-benefist.scss
@@ -18,7 +18,15 @@
   .container {
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
+    
+    
+}
+@media screen and (min-width:320px) and (max-width:1199px) {
+  .section-benefist {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
