--- a/sass/utils/components/_backdrop.scss
+++ b/sass/utils/components/_backdrop.scss
@@ -27,7 +27,6 @@
     top: 50%;
     width: calc(100% - 2*15px);
     max-width: 528px;
-    max-height: 581px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
     border-radius: 4px;
@@ -240,7 +239,13 @@
       color: #2196F3;
     }
     .label{
-      display: block;
+      display: inline-block;
+      width: 100%;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 1.714;
+      color: #757575;
      
     }
     .checkbox{
