--- a/sass/utils/components/_features.scss
+++ b/sass/utils/components/_features.scss
@@ -21,6 +21,7 @@
     padding: 0;
     margin: 0;
     margin-bottom: 10px;
+    text-align: center;
   }
   .features p {
     font-weight: 400;
@@ -105,6 +106,7 @@
     }
     .features .features-item:nth-child(2n) {
       margin-right: 0;
+      margin-left: 30px;
   }
   .features .features-item {
       margin-right: 30px;
@@ -129,7 +131,7 @@
     position: absolute;}
     section{
       padding-top: 60px;
-      padding-bottom: 60px;
+      padding-bottom: 30px;
     }
   }
   @media screen and (min-width:1200px) {
