--- a/sass/utils/components/_header.scss
+++ b/sass/utils/components/_header.scss
@@ -43,7 +43,7 @@
 /* +1200px */
 @media screen and (min-width:1200px) {
   .container-header{
-  width: 1200px;
+width: 1200px;
   }
 }
 @media screen and (min-width:768px) {
@@ -78,7 +78,7 @@
 .container-header{
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
+  max-width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     display: flex;
