--- a/sass/utils/components/_mobile-menu.scss
+++ b/sass/utils/components/_mobile-menu.scss
@@ -1,6 +1,7 @@
 .mobile-menu{
 
-    position:absolute;
+    position:fixed;
+    overflow-x: hidden;
     top: 0;
     left: 0;
     background-color: #ffff;
@@ -11,6 +12,7 @@ pointer-events: none;
 transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
 .mobile-menu.is-hidden{
     opacity: 1;
     pointer-events: auto;
@@ -22,6 +24,13 @@ background-color: #ffff;
 border: none;
 top: 21px;
 right: 25px;
+&:focus{
+  fill: #2196f3;
+
+}
+&:hover{
+fill: #2196f3;
+}
 }
 .mabile-menu_container{
 position: relative;
@@ -66,7 +75,7 @@ color: #212121;
     .hero {
         background: #C4C4C4;
         color: #ffff;
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ),url(../images/Img_фон_копія@1x.jpg);
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ),url(../images/Img_fon_@1x.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -77,7 +86,7 @@ color: #212121;
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         .hero {
-          background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)) ,url(../images/Img_фон_копія@2x.jpg);
+          background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)) ,url(../images/Img_fon_@2x.jpg);
         }
       }
       
@@ -144,7 +153,18 @@ color: #212121;
       max-width:100%;
       color: #2196f3;
     }
-   
+    .header-list a.header-list__cap-studio {
+      color: #2196f3;
+    }
+    .header-list a.header-list__cap-portfolio{
+      color:#2196f3;
+    }
+    .header-list_mobile a.header-list__cap-studio {
+      color: #2196f3;
+    }
+    .header-list_mobile a.header-list__cap-portfolio{
+      color:#2196f3;
+    }
   }
   @media screen and (max-width:767px) {
   .header-contacts__icon-cap .header-contacts__cap-tel{
@@ -155,13 +175,14 @@ color: #212121;
        font-size: 24px; 
        color: #757575;
    }
+  
   }
   /* +768px */
   @media screen and (min-width:768px) {
     .hero {
         background: #C4C4C4;
         color: #ffff;
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ),url(../images/Img_фон_копія_768@1x.jpg);
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ),url(../images/Img_fon_768@1x.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -172,7 +193,7 @@ color: #212121;
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         .hero {
-          background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_фон_копія_768@2x.jpg);
+          background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_fon_768@2x.jpg);
         }
       }
       
@@ -237,12 +258,7 @@ color: #212121;
   
   
   
-  .header-list a.header-list__cap-studio {
-    color: #2196f3;
-  }
-  .header-list a.header-list__cap-portfolio{
-    color:#2196f3;
-  }
+  
   .header-list__cap-studio:after{
     content: '';
   position: absolute;
@@ -360,7 +376,7 @@ color: #212121;
         
         background: #C4C4C4;
         color: #ffff;
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ),url(../images/Img_фон_копія_1200@1x.jpg);
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ),url(../images/Img_fon_1200@1x.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -374,7 +390,7 @@ color: #212121;
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         .hero {
-          background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/Img_фон_копія_1200@2x.jpg);
+          background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4) ), url(../images/Img_fon_1200@2x.jpg);
         }
       }
    
@@ -570,12 +586,7 @@ color: #212121;
 
 
 
-.header-list a.header-list__cap-studio {
-  color: #2196f3;
-}
-.header-list a.header-list__cap-portfolio{
-  color:#2196f3;
-}
+
 .header-list__cap-studio:after{
   content: '';
 position: absolute;
