--- a/sass/utils/components/_we_do_section.scss
+++ b/sass/utils/components/_we_do_section.scss
@@ -5,6 +5,7 @@
     padding: 0;
     margin: 0;
     display: flex;
+    height: 294px;
     
   }
   .we_do_section img{
@@ -18,7 +19,7 @@
   }
   .we_do_section__content{
     position:relative;
-    bottom: 19%;
+    bottom: 24%;
     left: 0;
     display: flex;
     justify-content: center;
