--- a/css/main.css
+++ b/css/main.css
@@ -680,10 +680,13 @@ border-radius: 2px;
   display: block;
 }
 
-.info_team :not(:first-child, div, p, ul) {
+/*
+.info_team :not(:first-child ,div,p,ul,source,img){
+  padding: 0;
+  margin: 0;
   margin-left: 30px;
-}
 
+}*/
 .info_team {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -700,6 +703,10 @@ border-radius: 2px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.info_team__team-section_picture {
+  width: 270px;
 }
 
 @media screen and (min-width: 100px) and (max-width: 767px) {
@@ -722,22 +729,31 @@ border-radius: 2px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
-  .info_team :not(:first-child, div, p, ul) {
+  .info_team :not(:first-child, div, p, ul, source, img) {
     margin-left: 0px;
   }
   .info_team__team-section {
     margin-bottom: 30px;
-    margin-right: 30px;
   }
-  .info_team :not(:first-child, div, p, ul) {
+  .info_team :not(:first-child, div, p, ul, source, img) {
     margin-left: 0px;
   }
   .info_team .info_team__team-section:nth-child(2n) {
     margin-right: 0;
+    margin-left: 30px;
   }
   .info_team__team-section img {
     display: block;
     width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .info_team .info_team__team-section:nth-child(2n) {
+    margin-right: 0;
+    margin-left: 30px;
+  }
+  .info_team :not(:first-child, div, p, ul, source, img) {
+    margin-left: 30px;
   }
 }
 .team-social {
