--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@
 /* +480px */
 @media screen and (min-width: 320px) {
   .container-header {
+    width: 480px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -383,7 +384,7 @@ border-radius: 2px;
 @media screen and (min-width: 320px) and (max-width: 1199px) {
   .section-benefist {
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
   }
 }
 .features {
@@ -414,7 +415,6 @@ border-radius: 2px;
   padding: 0;
   margin: 0;
   margin-bottom: 10px;
-  text-align: center;
 }
 
 .features p {
@@ -456,8 +456,12 @@ border-radius: 2px;
   .features li {
     width: 100%;
   }
+  .features h3 {
+    text-align: center;
+  }
   .features li:not(:last-child) {
     margin-right: 30px;
+    margin-bottom: 30px;
   }
   .features__icon-background {
     width: 100%;
@@ -496,6 +500,7 @@ border-radius: 2px;
   }
   .features li:not(:last-child) {
     margin-right: 0;
+    margin-bottom: 30px;
   }
   .features .features-item:nth-child(2n) {
     margin-right: 0;
@@ -1483,6 +1488,15 @@ border-radius: 2px;
   background-repeat: no-repeat;
 }
 
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .form {
+    padding: 20px 20px;
+  }
+  .form_text {
+    font-size: 19px;
+    padding-bottom: 20px;
+  }
+}
 .header-portfolio {
   background: #ffffff;
   border-bottom: 1px solid #ECECEC;
@@ -1893,6 +1907,17 @@ border-radius: 2px;
   .header-contacts__icon-cap .header-contacts__cap-mailto {
     font-size: 24px;
     color: #757575;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 480px) {
+  .line:first-child {
+    margin-left: 5px;
+  }
+  .mabile-menu_container {
+    padding: 5px;
+  }
+  .header-list_mobile {
+    margin-bottom: 290px;
   }
 }
 /* +768px */
