--- a/sass/utils/components/_header.scss
+++ b/sass/utils/components/_header.scss
@@ -11,6 +11,7 @@
 /* +480px */
  @media screen and (min-width:320px) {
   .container-header{
+    width: 480px;
   margin-left: auto;
   margin-right: auto;
  }
