--- a/sass/utils/main.css
+++ b/sass/utils/main.css
@@ -13,6 +13,7 @@
 /* +480px */
 @media screen and (min-width: 320px) {
   .container-header {
+    width: 480px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -76,7 +77,7 @@ p {
 .container-header {
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
+  max-width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   display: flex;
@@ -361,7 +362,7 @@ border-radius: 2px;
 @media screen and (min-width: 320px) and (max-width: 1199px) {
   .section-benefist {
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
   }
 }
 .features {
@@ -423,8 +424,12 @@ border-radius: 2px;
   .features li {
     width: 100%;
   }
+  .features h3 {
+    text-align: center;
+  }
   .features li:not(:last-child) {
     margin-right: 30px;
+    margin-bottom: 30px;
   }
   .features__icon-background {
     width: 100%;
@@ -462,9 +467,11 @@ border-radius: 2px;
   }
   .features li:not(:last-child) {
     margin-right: 0;
+    margin-bottom: 30px;
   }
   .features .features-item:nth-child(2n) {
     margin-right: 0;
+    margin-left: 30px;
   }
   .features .features-item {
     margin-right: 30px;
@@ -487,7 +494,7 @@ border-radius: 2px;
   }
   section {
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -529,6 +536,7 @@ border-radius: 2px;
   padding: 0;
   margin: 0;
   display: flex;
+  height: 294px;
 }
 
 .we_do_section img {
@@ -541,7 +549,7 @@ border-radius: 2px;
 
 .we_do_section__content {
   position: relative;
-  bottom: 19%;
+  bottom: 24%;
   left: 0;
   display: flex;
   justify-content: center;
@@ -585,7 +593,7 @@ border-radius: 2px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .section_team h3 {
@@ -630,10 +638,13 @@ border-radius: 2px;
   display: block;
 }
 
-.info_team :not(:first-child, div, p, ul) {
+/*
+.info_team :not(:first-child ,div,p,ul,source,img){
+  padding: 0;
+  margin: 0;
   margin-left: 30px;
-}
 
+}*/
 .info_team {
   display: flex;
   justify-content: center;
@@ -644,6 +655,10 @@ border-radius: 2px;
   padding: 0;
   margin: 0;
   align-items: center;
+}
+
+.info_team__team-section_picture {
+  width: 270px;
 }
 
 @media screen and (min-width: 100px) and (max-width: 767px) {
@@ -665,18 +680,31 @@ border-radius: 2px;
   .info_team {
     flex-wrap: wrap;
   }
-  .info_team :not(:first-child, div, p, ul) {
+  .info_team :not(:first-child, div, p, ul, source, img) {
     margin-left: 0px;
   }
   .info_team__team-section {
     margin-bottom: 30px;
-    margin-right: 30px;
   }
-  .info_team :not(:first-child, div, p, ul) {
+  .info_team :not(:first-child, div, p, ul, source, img) {
     margin-left: 0px;
   }
   .info_team .info_team__team-section:nth-child(2n) {
     margin-right: 0;
+    margin-left: 30px;
+  }
+  .info_team__team-section img {
+    display: block;
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .info_team .info_team__team-section:nth-child(2n) {
+    margin-right: 0;
+    margin-left: 30px;
+  }
+  .info_team :not(:first-child, div, p, ul, source, img) {
+    margin-left: 30px;
   }
 }
 .team-social {
@@ -1040,7 +1068,6 @@ border-radius: 2px;
   top: 50%;
   width: calc(100% - 30px);
   max-width: 528px;
-  max-height: 581px;
   background: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1256,7 +1283,13 @@ border-radius: 2px;
 }
 
 .label {
-  display: block;
+  display: inline-block;
+  width: 100%;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.714;
+  color: #757575;
 }
 
 .checkbox {
@@ -1289,6 +1322,15 @@ border-radius: 2px;
   background-repeat: no-repeat;
 }
 
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .form {
+    padding: 20px 20px;
+  }
+  .form_text {
+    font-size: 19px;
+    padding-bottom: 20px;
+  }
+}
 .header-portfolio {
   background: #ffffff;
   border-bottom: 1px solid #ECECEC;
@@ -1457,7 +1499,8 @@ border-radius: 2px;
 }
 
 .mobile-menu {
-  position: absolute;
+  position: fixed;
+  overflow-x: hidden;
   top: 0;
   left: 0;
   background-color: white;
@@ -1480,6 +1523,12 @@ border-radius: 2px;
   border: none;
   top: 21px;
   right: 25px;
+}
+.mobile-menu_btn:focus {
+  fill: #2196f3;
+}
+.mobile-menu_btn:hover {
+  fill: #2196f3;
 }
 
 .mabile-menu_container {
@@ -1525,7 +1574,7 @@ border-radius: 2px;
   .hero {
     background: #C4C4C4;
     color: white;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_фон_копія@1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_fon_@1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -1534,7 +1583,7 @@ border-radius: 2px;
 }
 @media screen and (min-width: 100px) and (min-device-pixel-ratio: 2), screen and (min-width: 100px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 100px) and (min-resolution: 192dpi), screen and (min-width: 100px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_фон_копія@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_fon_@2x.jpg);
   }
 }
 @media screen and (min-width: 100px) {
@@ -1613,6 +1662,26 @@ border-radius: 2px;
     color: #2196f3;
   }
 }
+@media screen and (min-width: 100px) {
+  .header-list a.header-list__cap-studio {
+    color: #2196f3;
+  }
+}
+@media screen and (min-width: 100px) {
+  .header-list a.header-list__cap-portfolio {
+    color: #2196f3;
+  }
+}
+@media screen and (min-width: 100px) {
+  .header-list_mobile a.header-list__cap-studio {
+    color: #2196f3;
+  }
+}
+@media screen and (min-width: 100px) {
+  .header-list_mobile a.header-list__cap-portfolio {
+    color: #2196f3;
+  }
+}
 @media screen and (max-width: 767px) {
   .header-contacts__icon-cap .header-contacts__cap-tel {
     color: #2196f3;
@@ -1623,12 +1692,23 @@ border-radius: 2px;
     color: #757575;
   }
 }
+@media screen and (min-width: 100px) and (max-width: 480px) {
+  .line:first-child {
+    margin-left: 5px;
+  }
+  .mabile-menu_container {
+    padding: 5px;
+  }
+  .header-list_mobile {
+    margin-bottom: 290px;
+  }
+}
 /* +768px */
 @media screen and (min-width: 768px) {
   .hero {
     background: #C4C4C4;
     color: white;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_фон_копія_768@1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_fon_768@1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -1637,7 +1717,7 @@ border-radius: 2px;
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_фон_копія_768@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_fon_768@2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
@@ -1711,16 +1791,6 @@ border-radius: 2px;
     padding-top: 32px;
     padding-bottom: 32px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-@media screen and (min-width: 768px) {
-  .header-list a.header-list__cap-studio {
-    color: #2196f3;
-  }
-}
-@media screen and (min-width: 768px) {
-  .header-list a.header-list__cap-portfolio {
-    color: #2196f3;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1845,7 +1915,7 @@ border-radius: 2px;
   .hero {
     background: #C4C4C4;
     color: white;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_фон_копія_1200@1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_fon_1200@1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -1858,7 +1928,7 @@ border-radius: 2px;
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_фон_копія_1200@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img_fon_1200@2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -2074,16 +2144,6 @@ border-radius: 2px;
     padding-top: 32px;
     padding-bottom: 32px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header-list a.header-list__cap-studio {
-    color: #2196f3;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .header-list a.header-list__cap-portfolio {
-    color: #2196f3;
   }
 }
 @media screen and (min-width: 1200px) {
