--- a/sass/utils/components/_backdrop.scss
+++ b/sass/utils/components/_backdrop.scss
@@ -274,7 +274,7 @@
       background-color:#2196F3;
       border-color:#2196F3 ;
       border-radius: 2px;
-      background-image: url(/images/check\ mark.svg);
+      background-image: url(../images/check\ mark.svg);
       background-size: contain;
       background-origin: border-box;
       background-repeat:no-repeat;
