--- a/sass/utils/components/_backdrop.scss
+++ b/sass/utils/components/_backdrop.scss
@@ -275,6 +275,7 @@
       border-color:#2196F3 ;
       border-radius: 2px;
       background-image: url(../images/check\ mark.svg);
+      background-image: url(../images/check\ mark.svg);
       background-size: contain;
       background-origin: border-box;
       background-repeat:no-repeat;
