--- a/css/main.css
+++ b/css/main.css
@@ -1482,7 +1482,7 @@ border-radius: 2px;
   background-color: #2196F3;
   border-color: #2196F3;
   border-radius: 2px;
-  background-image: url(/images/check\ mark.svg);
+  background-image: url(../images/check\ mark.svg);
   background-size: contain;
   background-origin: border-box;
   background-repeat: no-repeat;
