--- a/css/main.css
+++ b/css/main.css
@@ -472,7 +472,7 @@ border-radius: 2px;
   }
   .container {
     max-width: 450px;
-    padding: 0;
+    padding: 0px 15px;
   }
   .section-we_do {
     opacity: 0;
@@ -705,9 +705,6 @@ border-radius: 2px;
 .info_team {
   padding: 0;
   margin: 0;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .info_team__team-section_picture {
@@ -1761,15 +1758,15 @@ border-radius: 2px;
   margin-bottom: 306px;
 }
 
-.header-list_mobile a {
+.header-list_mobile li {
   margin-bottom: 32px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-list_mobile a:focus {
+.header-list_mobile li:focus {
   color: #2196f3;
 }
-.header-list_mobile a:hover {
+.header-list_mobile li:hover {
   color: #2196f3;
 }
 
