--- a/sass/utils/components/_features.scss
+++ b/sass/utils/components/_features.scss
@@ -74,7 +74,7 @@
     }
     .container {
       max-width: 450px; 
-      padding: 0;
+      padding: 0px 15px;
     }
   .section-we_do{
     opacity: 0;
