--- a/sass/utils/components/_mobile-menu.scss
+++ b/sass/utils/components/_mobile-menu.scss
@@ -55,7 +55,7 @@ color: #212121;
   margin-bottom: 306px;
  
 }
-.header-list_mobile a{
+.header-list_mobile li{
   margin-bottom:32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus{
