--- a/sass/utils/main.css
+++ b/sass/utils/main.css
@@ -440,7 +440,7 @@ border-radius: 2px;
   }
   .container {
     max-width: 450px;
-    padding: 0;
+    padding: 0px 15px;
   }
   .section-we_do {
     opacity: 0;
@@ -654,7 +654,6 @@ border-radius: 2px;
 .info_team {
   padding: 0;
   margin: 0;
-  align-items: center;
 }
 
 .info_team__team-section_picture {
@@ -1555,14 +1554,14 @@ border-radius: 2px;
   margin-bottom: 306px;
 }
 
-.header-list_mobile a {
+.header-list_mobile li {
   margin-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-list_mobile a:focus {
+.header-list_mobile li:focus {
   color: #2196f3;
 }
-.header-list_mobile a:hover {
+.header-list_mobile li:hover {
   color: #2196f3;
 }
 
@@ -1700,7 +1699,7 @@ border-radius: 2px;
     padding: 5px;
   }
   .header-list_mobile {
-    margin-bottom: 290px;
+    margin-bottom: 225px;
   }
 }
 /* +768px */
